Create tabs component.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="styles/switch.css" rel="stylesheet">
     <link href="styles/demo.css" rel="stylesheet">
     <link href="styles/offcanvas.css" rel="stylesheet">
+    <link href="styles/tabs.css" rel="stylesheet">
+
   </head>
   <body>
     <header>
@@ -82,6 +84,37 @@
           <div/>
       </div>
     </section>
+
+    <section>
+      <h2>Tabs</h2>
+      <ul class="tabs">
+        <li>
+          <input id="tab1" class="tabs-control" type="radio" name="tabs-group-1" checked>
+          <label class="tabs-label" for="tab1">Tab 1</label>
+          <div class="tabs-panel">
+            <h3>Content 1</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          </div>
+        </li>
+        <li>
+          <input id="tab2" class="tabs-control" type="radio" name="tabs-group-1">
+          <label class="tabs-label"  for="tab2">Tab 2</label>
+          <div class="tabs-panel">
+            <h3>Content 2</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          </div>
+        </li>
+        <li>
+          <input id="tab3" class="tabs-control" type="radio" name="tabs-group-1">
+          <label class="tabs-label"  for="tab3">Tab 3</label>
+          <div class="tabs-panel">
+            <h3>Content 3</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          </div>
+        </li>
+      </ul>
+    </section>
+
 
     <footer>
       <a href="https://github.com/pazguille/checked" id="github-ribbon"><img width="149" height="149" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
