--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="styles/demo.css" rel="stylesheet">
     <link href="styles/offcanvas.css" rel="stylesheet">
     <link href="styles/tabs.css" rel="stylesheet">
+    <link href="styles/tooltip.css" rel="stylesheet">
 
   </head>
   <body>
@@ -115,6 +116,16 @@
       </ul>
     </section>
 
+    <section>
+      <h2>Tooltip</h2>
+      <div class="tooltip">
+        <input id="tooltip" class="tooltip-control" type="checkbox" checked>
+        <h2 class="tooltip-header"><label for="tooltip" class="tooltip-trigger">Show a Tooltip</label></h2>
+        <div class="tooltip-content">
+          <p>Lorem Ipsum.</p>
+        </div>
+      </div>
+    </section>
 
     <footer>
       <a href="https://github.com/pazguille/checked" id="github-ribbon"><img width="149" height="149" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
