--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="styles/offcanvas.css" rel="stylesheet">
     <link href="styles/tabs.css" rel="stylesheet">
     <link href="styles/tooltip.css" rel="stylesheet">
+    <link href="styles/dropdown.css" rel="stylesheet">
 
   </head>
   <body>
@@ -124,6 +125,20 @@
         <div class="tooltip-content">
           <p>Lorem Ipsum.</p>
         </div>
+      </div>
+    </section>
+
+    <section>
+      <h2>Dropdown</h2>
+      <div class="dropdown">
+        <input id="dropdown" class="dropdown-control" type="checkbox">
+        <label for="dropdown" class="dropdown-trigger">Dropdown Menu</label>
+        <menu class="dropdown-menu">
+          <li><a role="menuitem" class="dropdown-item" href="https://www.google.com/intl/en/chrome/">Chrome</a></li>
+          <li><a role="menuitem" class="dropdown-item" href="http://www.mozilla.org/firefox/">Firefox</a></li>
+          <li><a role="menuitem" class="dropdown-item" href="https://www.apple.com/safari/">Safari</a></li>
+          <li><a role="menuitem" class="dropdown-item" href="http://www.opera.com/">Opera</a></li>
+        </menu>
       </div>
     </section>
 
