Create checkboxes and rario components.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link href="styles/tabs.css" rel="stylesheet">
     <link href="styles/tooltip.css" rel="stylesheet">
     <link href="styles/dropdown.css" rel="stylesheet">
+    <link href="styles/checkbox.css" rel="stylesheet">
+    <link href="styles/radios.css" rel="stylesheet">
 
   </head>
   <body>
@@ -140,6 +142,34 @@
           <li><a role="menuitem" class="dropdown-item" href="http://www.opera.com/">Opera</a></li>
         </menu>
       </div>
+    </section>
+
+    <section>
+      <h2>Checkboxes</h2>
+      <label class="checkbox">
+        <input class="checkbox-control" type="checkbox" name="peace" checked>
+        <i class="checkbox-icon"></i>
+        Peace
+      </label>
+      <label class="checkbox">
+        <input class="checkbox-control" type="checkbox" name="love">
+        <i class="checkbox-icon"></i>
+        Love
+      </label>
+    </section>
+
+    <section>
+      <h2>Radio buttons</h2>
+      <label class="radio">
+        <input class="radio-control" type="radio" name="radio" checked>
+        <i class="radio-icon"></i>
+        Radio On
+      </label>
+      <label class="radio">
+        <input class="radio-control" type="radio" name="radio">
+        <i class="radio-icon"></i>
+        Radio Off
+      </label>
     </section>
 
     <footer>
