Move demo files into demo folder.

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,22 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <title>checked: UI components using :checked CSS pseudo-class selectors.</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>checked: UI components using :checked CSS pseudo-class selectors.</title>
-
-    <link href="styles/base.css" rel="stylesheet">
-    <link href="styles/collapse.css" rel="stylesheet">
-    <link href="styles/modal.css" rel="stylesheet">
-    <link href="styles/switch.css" rel="stylesheet">
-    <link href="styles/demo.css" rel="stylesheet">
-    <link href="styles/offcanvas.css" rel="stylesheet">
-    <link href="styles/tabs.css" rel="stylesheet">
-    <link href="styles/tooltip.css" rel="stylesheet">
-    <link href="styles/dropdown.css" rel="stylesheet">
-    <link href="styles/checkbox.css" rel="stylesheet">
-    <link href="styles/radios.css" rel="stylesheet">
-
+    <meta http-equiv="cleartype" content="on">
+    <meta name="HandheldFriendly" content="True">
+    <link href="../build/checked.css" rel="stylesheet">
+    <link href="demo.css" rel="stylesheet">
   </head>
   <body>
     <header>
