--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
     </section>
 
     <footer>
+      <iframe id="twitter" allowtransparency="true" frameborder="0" width="100" height="22" scrolling="no" src="https://platform.twitter.com/widgets/tweet_button.html?text=Checked%3A%20A%20UI%20components%20using%20:checked%20CSS%20pseudo-class%20selectors.&amp;url=http%3A%2F%2Fpazguille.github.io%2Fchecked"></iframe>
+
       <a href="https://github.com/pazguille/checked" id="github-ribbon"><img width="149" height="149" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
       by <a href="http://pazguille.me/">Guille Paz</a> with <a href="http://welovefrontend.org/" class="heart">❤</a>
       <iframe id="github-button" src="http://ghbtns.com/github-btn.html?user=pazguille&repo=checked&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="152" height="30"></iframe>
